// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExperimentDates renders with all props set 1`] = `
<DocumentFragment>
  <div
    class="__InlineList__ di"
  >
    <ul>
      <li>
        <span>
          Proposed: Feb 1, 1984
        </span>
        , 
      </li>
      <li>
        <span>
          Approved: Feb 2, 1984
        </span>
        , 
      </li>
      <li>
        <span>
          Started: Feb 3, 1984
        </span>
        , 
      </li>
      <li>
        <span>
          Cancelled: Feb 4, 1984
        </span>
        , 
      </li>
      <li>
        <span>
          Completed: Feb 5, 1984
        </span>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`ExperimentDates renders with partial dates 1`] = `
<DocumentFragment>
  <div
    class="__InlineList__"
  >
    <ul>
      <li>
        <span>
          Proposed: 1984
        </span>
        , 
      </li>
      <li>
        <span>
          Approved: Feb, 1984
        </span>
        , 
      </li>
      <li>
        <span>
          Started: Feb 3, 1984
        </span>
        , 
      </li>
      <li>
        <span>
          Still Running
        </span>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`ExperimentDates renders without dateCancelled or dateCompleted 1`] = `
<DocumentFragment>
  <div
    class="__InlineList__"
  >
    <ul>
      <li>
        <span>
          Proposed: Feb 1, 1984
        </span>
        , 
      </li>
      <li>
        <span>
          Approved: Feb 2, 1984
        </span>
        , 
      </li>
      <li>
        <span>
          Started: Feb 3, 1984
        </span>
        , 
      </li>
      <li>
        <span>
          Still Running
        </span>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
